tests/syntax_error/missing_end_quote_in_string.jou
import "stdlib/io.jou"

def main() -> int:
    printf("Hello) 
    # Error: missing " to end the string
    return 0